--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="aaaaaaa"
+        android:text="@string/new_text"
         android:layout_alignParentRight="true"/>
 </RelativeLayout>
