--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,18 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/conteiner.dark">
 
-    <LinearLayout
+    <fragment
+        class="by.chagarin.androidlesson.TransctionsFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#f7f7f7">
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/listview"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="@dimen/dividerHeight"></ListView>
-    </LinearLayout>
-
+        android:id="@+id/transactions_fragment" />
 
 </RelativeLayout>
