--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/listBackground">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Container.Background">
 
-    <ListView
-        android:id="@+id/listview"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="@dimen/dividerHeight" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:background="@color/background">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listview"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="@dimen/dividerHeight" />
+    </LinearLayout>
+
+
+</RelativeLayout>
