--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="listBackground">#f7f7f7</color>
+    <color name="background">#F7F7F7</color>
+    <color name="green">#1A9C56</color>
+    <color name="text_color">#7F7F7F</color>
+    <color name="green_dark">#157E46</color>
 </resources>
