--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,6 +10,7 @@
         android:layout_height="60dp"
         android:layout_margin="5dp"
         android:layout_marginBottom="7dp"
+        android:clickable="true"
         card_view:cardBackgroundColor="@color/background"
         card_view:cardCornerRadius="3dp">
 
