--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <color name="green">#1A9C56</color>
     <color name="text_color">#7F7F7F</color>
     <color name="green_dark">#157E46</color>
-    <color name="primary">#3f51b5</color>
-    <color name="primary_dark">#303f9f</color>
-    <color name="ripple">#F06292</color>
-    <color name="accent">#E91E63</color>
+    <color name="primary">#dc3e52</color>
+    <color name="primary_dark">#dc3e52</color>
+    <color name="ripple">#dc3e52</color>
+    <color name="accent">#dc3e56</color>
     <color name="accent_pressed">#C2185B</color>
 </resources>
