--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -16,12 +16,14 @@
             android:layout_height="wrap_content"
             android:gravity="fill"
             android:textSize="20dp"
-            android:text="Сумма" />
+            android:text="@string/add_activity_sum_name" />
 
         <EditText
+            android:id="@+id/sum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
+            android:inputType="numberDecimal"
             android:hint="300"
             android:textSize="20dp" />
 
@@ -29,10 +31,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
-            android:text="Примечание"
+            android:text="@string/add_activity_title_name"
             android:textSize="20dp" />
 
         <EditText
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
@@ -69,5 +72,13 @@
             android:text="Сегодня"
             android:textSize="20dp" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_text"
+            android:onClick="onClick"
+            android:id="@+id/add_button"
+            android:clickable="true"
+            android:enabled="true" />
     </GridLayout>
 </LinearLayout>
