--- a/app/src/main/res/layout/statistics_fragment.xml
+++ b/app/src/main/res/layout/statistics_fragment.xml
@@ -5,7 +5,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/warning"
+        android:text="@string/statistics_text"
         android:textColor="@color/text_color"
         android:gravity="center"
         android:textSize="@android:dimen/app_icon_size" />
