--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,7 +10,6 @@
         android:layout_height="60dp"
         android:layout_margin="5dp"
         android:layout_marginBottom="7dp"
-        android:clickable="true"
         card_view:cardBackgroundColor="@color/background"
         card_view:cardCornerRadius="3dp">
 
@@ -58,7 +57,14 @@
                 android:text="Сумма"
                 android:textColor="#7F7F7F"
                 android:textSize="16dp" />
-
         </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/selected_overlay"
+            android:background="@color/primary_foreground"
+            android:visibility="invisible" />
+
     </android.support.v7.widget.CardView>
 </RelativeLayout>
