--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="accent">#dc3e56</color>
     <color name="accent_pressed">#C2185B</color>
     <color name="primary_foreground">#88bebebe</color>
+    <color name="button_color">#7E7E7E</color>
 </resources>
