--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -49,13 +49,11 @@
             android:text="Категория"
             android:textSize="20dp" />
 
-        <TextView
+        <Spinner
+            android:id="@+id/spinner"
+            android:spinnerMode="dialog"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="fill"
-            android:textColor="@color/green"
-            android:text="Книги"
-            android:textSize="20dp" />
+            android:layout_height="wrap_content"></Spinner>
 
         <TextView
             android:layout_width="wrap_content"
