--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -6,6 +6,7 @@
     android:gravity="center_horizontal">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_id"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_margin="5dp"
