--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,11 +48,23 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
+    <style name="Container_landscape">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="windowActionModeOverlay">true</item>
+    </style>
+
     <style name="Container.Background">
         <item name="android:background">@drawable/android_app_back_main</item>
     </style>
 
     <style name="Container.AddBackground">
+        <item name="android:background">@drawable/android_app_back</item>
+    </style>
+
+    <style name="Container_landscape.AddBackground">
         <item name="android:background">@drawable/android_app_back</item>
     </style>
 
