--- a/app/src/main/res/layout-xlarge/activity_add_transaction.xml
+++ b/app/src/main/res/layout-xlarge/activity_add_transaction.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Container.AddBackground"
-    android:baselineAligned="false">
+    style="@style/Container_landscape.AddBackground"
+    android:baselineAligned="false"
+    android:orientation="vertical">
 
     <include layout="@layout/toolbar" />
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="2"
-        android:rowCount="4"
+        android:columnCount="4"
+        android:rowCount="1"
         android:background="@color/background">
 
         <TextView
