--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -2,9 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Container.Background">
 
-    <by.chagarin.androidlesson.views.PieChartView
-        android:id="@+id/pie_diagramm"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:name="by.chagarin.androidlesson.views.PieChartView" />
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/pie_chart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
