--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -21,6 +21,7 @@
 
         <EditText
             android:id="@+id/sum"
+            android:background="#00000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
@@ -32,11 +33,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
+            android:paddingRight="10dp"
             android:text="@string/add_activity_title_name"
             android:textSize="20dp" />
 
         <EditText
             android:id="@+id/title"
+            android:background="#00000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
@@ -52,6 +55,7 @@
 
         <Spinner
             android:id="@+id/spinner"
+            android:textSize="20dp"
             android:spinnerMode="dialog"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"></Spinner>
@@ -64,20 +68,29 @@
             android:textSize="20dp" />
 
         <TextView
+            android:id="@+id/date_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
-            android:textColor="@color/green"
-            android:text="Сегодня"
             android:textSize="20dp" />
 
-        <Button
+        <EditText
+            android:id="@+id/comment"
+            android:background="#00000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_text"
-            android:onClick="onClick"
-            android:id="@+id/add_button"
-            android:clickable="true"
-            android:enabled="true" />
+            android:gravity="fill"
+            android:layout_columnSpan="2"
+            android:hint="@string/comment" />
+
     </GridLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_text"
+        android:onClick="onClick"
+        android:id="@+id/add_button"
+        android:clickable="true"
+        android:enabled="true" />
 </LinearLayout>
