--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -45,5 +45,19 @@
             android:background="@color/primary_foreground"
             android:visibility="invisible" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/proceed_category"
+            android:background="@color/proceed_category_foreground"
+            android:visibility="invisible" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/place_category"
+            android:background="@color/place_category_foreground"
+            android:visibility="invisible" />
+
     </android.support.v7.widget.CardView>
 </RelativeLayout>
