--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -67,5 +67,13 @@
             android:background="@color/primary_foreground"
             android:visibility="invisible" />
 
+        <TextView
+            android:id="@+id/comment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom"
+            android:text="Комментарий"
+            android:textColor="#7F7F7F"
+            android:textSize="16dp" />
     </android.support.v7.widget.CardView>
 </RelativeLayout>
