--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -3,7 +3,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="25dp"
+    android:textSize="20dp"
     android:gravity="center"
-    android:textColor="@color/md_black_1000"
-    android:padding="5dip" />
+    android:textColor="@color/text_color"
+    android:padding="5dp" />
