--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -13,6 +13,7 @@
         android:background="@color/background">
 
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
@@ -20,6 +21,7 @@
             android:text="@string/add_activity_sum_name" />
 
         <EditText
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/sum"
             android:background="#00000000"
             android:layout_width="wrap_content"
@@ -27,83 +29,97 @@
             android:gravity="fill"
             android:inputType="numberDecimal"
             android:hint="300"
-            android:textSize="20dp" />
+            android:textSize="@dimen/add_transaction_text_size" />
 
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
             android:paddingRight="10dp"
             android:text="@string/add_activity_title_name"
-            android:textSize="20dp" />
+            android:textSize="@dimen/add_transaction_text_size" />
 
         <EditText
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/title"
             android:background="#00000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
             android:hint="Война и мир"
-            android:textSize="20dp" />
+            android:textSize="@dimen/add_transaction_text_size" />
 
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
             android:text="Категория траты"
-            android:textSize="20dp" />
+            android:textSize="@dimen/add_transaction_text_size" />
 
         <Spinner
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/spinner_transaction"
-            android:textSize="20dp"
+            android:textSize="@dimen/add_transaction_text_size"
             android:spinnerMode="dialog"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"></Spinner>
+            android:layout_height="match_parent" />
 
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
             android:text="Источник платежа"
-            android:textSize="20dp" />
+            android:textSize="@dimen/add_transaction_text_size" />
 
         <Spinner
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/spinner_place"
-            android:textSize="20dp"
+            android:textSize="@dimen/add_transaction_text_size"
             android:spinnerMode="dialog"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"></Spinner>
+            android:layout_height="match_parent" />
+
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
             android:text="Дата"
-            android:textSize="20dp" />
+            android:textSize="@dimen/add_transaction_text_size" />
 
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/date_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
-            android:textSize="20dp" />
+            android:textSize="@dimen/add_transaction_text_size" />
 
         <EditText
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/comment"
             android:background="#00000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
             android:layout_columnSpan="2"
-            android:hint="@string/comment" />
+            android:hint="@string/comment"
+            android:textSize="@dimen/add_transaction_text_size" />
 
     </GridLayout>
 
     <Button
+        android:layout_marginBottom="@dimen/add_transactions_padding"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_text"
         android:onClick="onClick"
         android:id="@+id/add_button"
         android:clickable="true"
-        android:enabled="true" />
+        android:enabled="true"
+        android:textSize="@dimen/add_transaction_text_size" />
+
 </LinearLayout>
