--- a/app/src/main/res/layout/activity_add_proceed.xml
+++ b/app/src/main/res/layout/activity_add_proceed.xml
@@ -13,6 +13,7 @@
         android:background="@color/background">
 
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
@@ -20,6 +21,7 @@
             android:text="@string/add_activity_sum_name" />
 
         <EditText
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/sum"
             android:background="#00000000"
             android:layout_width="wrap_content"
@@ -30,6 +32,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
@@ -38,6 +41,7 @@
             android:textSize="20dp" />
 
         <EditText
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/title"
             android:background="#00000000"
             android:layout_width="wrap_content"
@@ -47,6 +51,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
@@ -54,6 +59,7 @@
             android:textSize="20dp" />
 
         <Spinner
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/spinner_proceed"
             android:textSize="20dp"
             android:spinnerMode="dialog"
@@ -61,6 +67,7 @@
             android:layout_height="match_parent"></Spinner>
 
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
@@ -68,6 +75,7 @@
             android:textSize="20dp" />
 
         <Spinner
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/spinner_place"
             android:textSize="20dp"
             android:spinnerMode="dialog"
@@ -75,6 +83,7 @@
             android:layout_height="match_parent"></Spinner>
 
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="fill"
@@ -82,6 +91,7 @@
             android:textSize="20dp" />
 
         <TextView
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/date_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,6 +99,7 @@
             android:textSize="20dp" />
 
         <EditText
+            android:layout_marginBottom="@dimen/add_transactions_padding"
             android:id="@+id/comment"
             android:background="#00000000"
             android:layout_width="wrap_content"
@@ -106,5 +117,6 @@
         android:onClick="onClick"
         android:id="@+id/add_button"
         android:clickable="true"
-        android:enabled="true" />
+        android:enabled="true"
+        android:textSize="@dimen/add_transaction_text_size" />
 </LinearLayout>
