--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="add_transaction_text_size">24dp</dimen>
     <dimen name="add_transactions_padding">5dp</dimen>
     <dimen name="sign_top_margin">50dp</dimen>
+    <dimen name="customTitle">14sp</dimen>
+    <dimen name="customEntry">18sp</dimen>
 </resources>
