--- a/app/src/main/res/layout/dialog_change_transaction.xml
+++ b/app/src/main/res/layout/dialog_change_transaction.xml
@@ -77,6 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="fill"
+        android:id="@+id/category_first"
         android:text="@string/transaction_category"
         android:textColor="#000000"
         android:textSize="@dimen/customEntry" />
@@ -94,6 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="fill"
+        android:id="@+id/category_second"
         android:text="@string/places_category"
         android:textColor="#000000"
         android:textSize="@dimen/customEntry" />
