теперь добавление и изменения через диалоги

--- a/app/src/main/res/menu/menu_transactions.xml
+++ b/app/src/main/res/menu/menu_transactions.xml
@@ -4,8 +4,7 @@
     <item
         android:id="@+id/cash"
         android:title="cash"
-        app:showAsAction="ifRoom|withText"
-        android:icon="@drawable/ic_attach_money" />
+        app:showAsAction="always|withText" />
     <item
         android:id="@+id/menu_search"
         android:title="@string/search"
