--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,8 @@
     <dimen name="sign_top_margin">50dp</dimen>
     <dimen name="customTitle">14sp</dimen>
     <dimen name="customEntry">18sp</dimen>
+    <dimen name="material_drawer_padding_half">4dp</dimen>
+    <dimen name="material_drawer_persistent_height">48dp</dimen>
+    <dimen name="material_drawer_persistent_height_icon">32dp</dimen>
+    <dimen name="fullscreen_status_bar_height">0dp</dimen>
 </resources>
