добавляю красивое отображение материал дровера

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Container">
 
-    <include layout="@layout/toolbar" />
-
-    <android.support.v4.widget.DrawerLayout
+    <LinearLayout
+        android:id="@+id/crossfade_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/drawer_layout"
-        android:background="@android:color/transparent">
+        android:orientation="vertical">
+
+        <include layout="@layout/toolbar" />
+
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -23,6 +24,5 @@
             android:choiceMode="singleChoice"
             android:background="@color/background"
             android:divider="@android:color/transparent" />
-
-    </android.support.v4.widget.DrawerLayout>
+    </LinearLayout>
 </LinearLayout>
