--- a/app/src/main/res/layout/dialog_transfer.xml
+++ b/app/src/main/res/layout/dialog_transfer.xml
@@ -2,101 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_centerInParent="true"
-    android:layout_centerVertical="true"
-    android:orientation="vertical"
-    android:background="@color/background"
-    android:paddingBottom="@dimen/dialog_bottom"
-    android:paddingLeft="@dimen/dialog_padding"
-    android:paddingRight="@dimen/dialog_padding"
-    android:paddingTop="@dimen/dialog_padding">
+    android:orientation="vertical">
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:id="@+id/title"
+        android:text="@string/add_activity_sum_name"
+        android:textColor="#000000"
+        android:textSize="@dimen/customEntry" />
+
+    <EditText
+        android:id="@+id/price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/transfer_title"
-        android:textSize="@dimen/dialog_text_size"
-        android:textColor="@color/green" />
+        android:layout_marginTop="4dp"
+        android:inputType="numberDecimal"
+        android:textColor="#80000000"
+        android:textSize="@dimen/customTitle" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_marginTop="18dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:gravity="fill"
+        android:id="@+id/transfer_to_or_from"
+        android:text="@string/transaction_category"
+        android:textColor="#000000"
+        android:textSize="@dimen/customEntry" />
 
-        <EditText
-            android:layout_marginBottom="@dimen/dialog_transfer_padding"
-            android:layout_width="@dimen/transfer_cash"
-            android:layout_height="wrap_content"
-            android:id="@+id/edit_text"
-            android:hint="@string/hint_price_example"
-            android:inputType="numberDecimal"
-            android:textColor="@color/green_dark"
-            android:textSize="@dimen/dialog_text_size" />
+    <Spinner
+        android:layout_marginTop="4dp"
+        android:id="@+id/transfer_spinner"
+        android:textSize="@dimen/customEntry"
+        android:spinnerMode="dialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:layout_marginBottom="@dimen/dialog_transfer_padding"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/byn"
-            android:textColor="@color/green_dark"
-            android:textSize="@dimen/dialog_text_size" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_marginBottom="@dimen/dialog_transfer_padding"
-            android:id="@+id/transfer_to_or_from"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/dialog_text_size"
-            android:textColor="@color/text_color" />
-
-        <Spinner
-            android:layout_marginBottom="@dimen/dialog_transfer_padding"
-            android:id="@+id/transfer_spinner"
-            android:textSize="@dimen/dialog_text_size"
-            android:spinnerMode="dialog"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:layout_width="@dimen/dialog_button_width"
-            android:layout_height="wrap_content"
-            android:id="@+id/ok_button"
-            android:text="@string/ok_button"
-            android:textColor="@color/green_dark"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:gravity="center"
-            android:enabled="true"
-            android:background="@color/primary_foreground" />
-
-        <Button
-            android:layout_width="@dimen/dialog_button_width"
-            android:layout_height="wrap_content"
-            android:id="@+id/cancel_button"
-            android:text="@string/cancel_button"
-            android:textColor="@color/green_dark"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:gravity="center"
-            android:enabled="true"
-            android:background="@color/primary_foreground" />
-
-    </RelativeLayout>
 </LinearLayout>
