--- a/app/src/main/res/menu/menu_transactions.xml
+++ b/app/src/main/res/menu/menu_transactions.xml
@@ -8,6 +8,6 @@
     <item
         android:id="@+id/menu_search"
         android:title="@string/search"
-        app:showAsAction="ifRoom"
+        app:showAsAction="never"
         app:actionViewClass="android.widget.SearchView" />
 </menu>
